--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <header class="lg:max-w-6xl mx-auto mt-4 px-2 lg:px-0">
+    <header id="head" class="lg:max-w-6xl mx-auto mt-4 px-2 lg:px-0">
       <!-- navber  -->
       <div class="navbar bg-base-100">
         <div class="navbar-start">
@@ -97,7 +97,7 @@
         <!-- card banner  -->
 
         <div
-          class="hidden lg:flex flex-col lg:flex-row gap-5 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:px-4 *:py-6 absolute *:w-[300px] -bottom-[300px] lg:-bottom-[60px] left-[15%]"
+          class="hidden lg:flex flex-col lg:flex-row gap-8 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:px-4 *:py-6 absolute *:w-[350px] -bottom-[300px] lg:-bottom-[60px] left-[15%]"
         >
           <div>
             <img src="images/people.png" alt="pepole" />
@@ -124,14 +124,14 @@
       </section>
     </header>
 
-    <main>
+    <main id="main">
       <!-- Best offers for you  -->
       <section class="lg:pt-12 px-2 max-w-6xl mx-auto mt-4">
         <h1 class="text-center pt-4 lg:pt-12 text-3xl font-bold">
           Best offers for you
         </h1>
         <div
-          class="flex flex-col lg:flex-row gap-5 *:rounded-xl *:h-[200px] *:py-8 *:px-4 mt-8 *:flex lg:*:flex-1 *:justify-between *:items-center *:relative"
+          class="flex flex-col lg:flex-row gap-5 *:rounded-xl *:h-[200px] *:py-8 *:px-6 mt-8 *:flex lg:*:flex-1 *:justify-between *:items-center *:relative"
         >
           <div class="bg-[#FFBF0F]">
             <div class="space-y-2">
@@ -150,6 +150,7 @@
               alt=""
             />
           </div>
+          <!-- cupole 20 -->
           <div class="bg-[#F78C9C]">
             <div class="space-y-2">
               <h1 class="text-3xl font-bold">20% OFF</h1>
@@ -168,7 +169,7 @@
             />
           </div>
         </div>
-        <div class="text-center mt-8">
+        <div class="text-center mt-14">
           <button
             class="px-8 py-4 font-bold border-solid border-[1px] border-[#1DD100] rounded-lg text-[#1DD100]"
           >
@@ -224,16 +225,16 @@
                 <p class="font-bold">9:00 PM</p>
               </div>
               <div
-                class="py-5 flex flex-col lg:flex-row *:mt-3 lg:*:mt-0 justify-between *:bg-[#0307120D] *:rounded-lg *:text-[#030712b5] *:font-semibold *:px-6 *:py-5"
+                class="py-5 flex flex-col lg:flex-row *:mt-3 lg:*:mt-0 justify-between *:bg-[#0307120D] *:rounded-lg *:text-[#030712b5] *:font-semibold *:py-5"
               >
-                <button>Boarding Point - Laxmipur</button>
-                <button>Dropping Point - Bogura</button>
-                <button>Est. Time - 11 Hour</button>
+                <button class="px-6">Boarding Point - Laxmipur</button>
+                <button class="px-6">Dropping Point - Bogura</button>
+                <button class="px-10">Est. Time - 11 Hour</button>
               </div>
             </div>
           </div>
 
-          <div class="lg:w-[20%] text-center">
+          <div class="lg:w-[20%] text-center space-y-2">
             <img class="block mx-auto" src="images/fare.png" alt="fare" />
             <h1 class="text-2xl font-bold">550 Taka</h1>
             <p class="paragraph-color">Per Seat</p>
@@ -528,7 +529,16 @@
                   BDT <span id="total-price">00</span>
                 </p>
               </div>
-              <div class="bg-white py-2 flex justify-between px-4 rounded-lg">
+              <!-- discount -->
+              <div id="discount" class="flex justify-between py-2 hidden">
+                <p class="font-bold">Discount Price</p>
+                <p class="font-bold">BDT <span id="discount-price"></span></p>
+              </div>
+              <!-- cupon -->
+              <div
+                id="cupon-input"
+                class="bg-white py-2 flex justify-between px-4 rounded-lg"
+              >
                 <input
                   id="cupon-code"
                   type="text"
@@ -589,11 +599,38 @@
           </div>
         </div>
       </section>
+      <!-- modal sucsess -->
     </main>
+    <!-- sucsess modal -->
+    <div
+      id="sucsess-modal"
+      class="flex justify-center items-center min-h-screen bg-[#e8e6e6] hidden"
+    >
+      <div class="rounded-lg w-4/12 h-[400px] text-center bg-white p-6">
+        <img class="block mx-auto" src="images/success.png" alt="" />
+        <h3 class="font-bold text-[#27AE60] py-6">SUCCESS</h3>
+        <p class="font-bold text-[#4A4A4A]">
+          Thank you for Booking Our Bus Seats. <br />
+          We are working hard to find the best service and deals for you.
+        </p>
+        <p class="py-4 text-[#4A4A4A]">
+          Shortly you will find a confirmation in your email.
+        </p>
+        <button
+          id="continue"
+          class="w-[300px] py-3 bg-[#27AE60] rounded-full text-white"
+        >
+          Continue
+        </button>
+      </div>
+    </div>
     <!-- footer section started -->
-    <footer class="px-4 md:px-44 py-5 md:py-20 bg-[#030712] text-white">
+    <footer
+      id="footer"
+      class="px-4 md:px-44 py-5 md:py-20 bg-[#030712] text-white"
+    >
       <div
-        class="flex flex-col md:flex-row md:justify-between md:items-center border-b border-dashed pb-6 gap-y-2 md:gap-y-0"
+        class="flex flex-col md:flex-row md:justify-between md:items-center border-b border-dashed border-[#FFFFFF4D] pb-6 gap-y-2 md:gap-y-0"
       >
         <div>
           <h1 class="text-4xl font-medium">P-Ticket</h1>
@@ -603,7 +640,15 @@
         </div>
         <div>
           <p class="text-xl text-gray-100 mb-2">Download our app</p>
-          <p>Google Play</p>
+          <div
+            class="flex gap-4 border-[1px] border-solid py-1 px-2 rounded-lg"
+          >
+            <img src="images/playstore.png" alt="" />
+            <div>
+              <p>GET IT ON</p>
+              <h1 class="text-xl font-bold">Google Play</h1>
+            </div>
+          </div>
         </div>
       </div>
       <div
@@ -613,7 +658,7 @@
           @all rights reserved, P-Ticket services limited.2024
         </p>
         <ul
-          class="flex items-center gap-x-4 text-sm md:text-base md:gap-x-6 text-gray-400 font-medium"
+          class="flex items-center gap-x-4 text-sm md:text-base md:gap-x-6 text-white] font-medium"
         >
           <li class="cursor-pointer">Terms & condition</li>
           <li class="cursor-pointer">Return & refund policy</li>
