--- a/index.html
+++ b/index.html
@@ -15,14 +15,7 @@
 
     <!-- style  -->
 
-    <style>
-      * {
-        scroll-behavior: smooth;
-      }
-      .paragraph-color {
-        color: #030712b3;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="head" class="lg:max-w-6xl mx-auto mt-4 px-2 lg:px-0">
@@ -51,7 +44,7 @@
               </svg>
             </div>
           </div>
-          <a class="text-3xl font-bold text-[#030712]">P-Ticket</a>
+          <a class="text-3xl font-bold text-[#030712] raleway">P-Ticket</a>
         </div>
 
         <div class="navbar-center hidden items-center lg:flex">
@@ -77,17 +70,16 @@
         class="bg-[url('images/banner.png')] bg-no-repeat bg-center bg-cover lg:bg-[100%_100%] lg:h-[500px] rounded-3xl mt-4 py-16 relative"
       >
         <div class="text-center lg:pt-4 space-y-5 lg:space-y-8">
-          <h1 class="text-3xl lg:text-5xl font-bold text-white">
+          <h1 class="text-3xl lg:text-5xl font-bold text-white raleway">
             End-to-End Travel with
           </h1>
-          <h1 class="text-[#1DD100] text-3xl lg:text-5xl font-bold">
+          <h1 class="text-[#1DD100] text-3xl lg:text-5xl font-bold raleway">
             P Paribahan
           </h1>
 
-          <p class="text-white">
-            Yes, you can run unit tests and view the results directly within the
-            <br />
-            app. The integrated testing features allow for a streamlined .
+          <p class="text-white raleway-semi">
+            Buy tickets at home and book now <br />
+            You can easily buy tickets online without any hassle.
           </p>
 
           <button class="px-8 py-4 font-bold bg-[#1DD100] rounded-lg">
@@ -127,7 +119,7 @@
     <main id="main">
       <!-- Best offers for you  -->
       <section class="lg:pt-12 px-2 max-w-6xl mx-auto mt-4">
-        <h1 class="text-center pt-4 lg:pt-12 text-3xl font-bold">
+        <h1 class="text-center pt-4 lg:pt-12 text-3xl font-bold raleway-midium">
           Best offers for you
         </h1>
         <div
@@ -140,7 +132,7 @@
               <p class="text-[#030712B3]">use by January 2024</p>
             </div>
             <div>
-              <h1 class="text-2xl font-bold">NEW15</h1>
+              <h1 class="text-2xl font-bold raleway-midium">NEW15</h1>
               <p class="text-[#030712B3]">Coupon Code</p>
             </div>
 
@@ -158,7 +150,7 @@
               <p class="text-[#030712B3]">use by January 2024</p>
             </div>
             <div>
-              <h1 class="text-2xl font-bold">Couple 20</h1>
+              <h1 class="text-2xl font-bold raleway-midium">Couple 20</h1>
               <p class="text-[#030712B3]">Coupon Code</p>
             </div>
 
@@ -171,7 +163,7 @@
         </div>
         <div class="text-center mt-14">
           <button
-            class="px-8 py-4 font-bold border-solid border-[1px] border-[#1DD100] rounded-lg text-[#1DD100]"
+            class="px-8 py-4 font-bold border-solid border-[1px] border-[#1DD100] rounded-lg text-[#1DD100] duration-500 hover:text-white hover:bg-[#1DD100]"
           >
             See All Offers
           </button>
@@ -183,9 +175,8 @@
       >
         <h1 class="text-center text-3xl font-bold">P.H Paribahan</h1>
         <p class="text-center pt-4 text-[#030712B3]">
-          Yes, you can run unit tests and view the results directly within the
-          app. <br />
-          The integrated testing features allow for a streamlined .
+          Select the seat of your choice and confirm your name, phone, email.
+          Have a good journey.
         </p>
         <div
           class="flex flex-col lg:flex-row lg:justify-between items-center lg:max-w-6xl mx-auto bg-white px-4 py-8 rounded-xl gap-4 relative mt-10"
@@ -211,7 +202,7 @@
               </button>
             </div>
 
-            <div class="bg-[#F7F8F8] px-5 rounded-xl mt-6">
+            <div class="bg-[#F7F8F8] px-5 rounded-xl mt-6 raleway-semi">
               <div
                 class="flex justify-between border-b-[1px] border-dashed border-[#03071233] py-4"
               >
@@ -236,7 +227,7 @@
 
           <div class="lg:w-[20%] text-center space-y-2">
             <img class="block mx-auto" src="images/fare.png" alt="fare" />
-            <h1 class="text-2xl font-bold">550 Taka</h1>
+            <h1 class="text-2xl font-bold raleway-midium">550 Taka</h1>
             <p class="paragraph-color">Per Seat</p>
           </div>
 
@@ -254,7 +245,9 @@
         >
           <div class="lg:w-[60%] lg:px-6">
             <div class="py-2 border-b-[1px] border-dashed border-[#03071233]">
-              <h1 class="text-xl font-bold pb-2">Select Your Seat</h1>
+              <h1 class="text-xl font-bold pb-2 raleway-semi">
+                Select Your Seat
+              </h1>
             </div>
             <div
               class="flex justify-between py-4 border-b-[1px] border-dashed border-[#03071233]"
@@ -502,7 +495,9 @@
             class="lg:w-[40%] lg:px-6 lg:border-l-[1px] lg:border-dashed lg:border-[#03071233]"
           >
             <div class="py-2 border-b-[1px] border-dashed border-[#03071233]">
-              <h1 class="text-xl font-bold pb-2">Select Your Seat</h1>
+              <h1 class="text-xl font-bold pb-2 raleway-semi">
+                Select Your Seat
+              </h1>
             </div>
             <div class="bg-[#F7F8F8] p-6 mt-6 rounded-lg">
               <div
@@ -530,9 +525,9 @@
                 </p>
               </div>
               <!-- discount -->
-              <div id="discount" class="flex justify-between py-2 hidden">
+              <div id="discount" class="flex justify-between py-2">
                 <p class="font-bold">Discount Price</p>
-                <p class="font-bold">BDT <span id="discount-price"></span></p>
+                <p class="font-bold">BDT <span id="discount-price">00</span></p>
               </div>
               <!-- cupon -->
               <div
@@ -540,6 +535,7 @@
                 class="bg-white py-2 flex justify-between px-4 rounded-lg"
               >
                 <input
+                  disabled
                   id="cupon-code"
                   type="text"
                   placeholder="Have any copupon?"
@@ -599,14 +595,13 @@
           </div>
         </div>
       </section>
-      <!-- modal sucsess -->
     </main>
     <!-- sucsess modal -->
     <div
       id="sucsess-modal"
       class="flex justify-center items-center min-h-screen bg-[#e8e6e6] hidden"
     >
-      <div class="rounded-lg w-4/12 h-[400px] text-center bg-white p-6">
+      <div class="rounded-lg w-[530px] h-[400px] text-center bg-white p-6">
         <img class="block mx-auto" src="images/success.png" alt="" />
         <h3 class="font-bold text-[#27AE60] py-6">SUCCESS</h3>
         <p class="font-bold text-[#4A4A4A]">
