card banner responsive

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
               </svg>
             </div>
           </div>
-          <a class="text-3xl font-bold text-[#030712] raleway">P-Ticket</a>
+          <a class="text-xl lg:text-3xl font-bold text-[#030712] raleway"
+            >P-Ticket</a
+          >
         </div>
 
         <div class="navbar-center hidden items-center lg:flex">
@@ -89,7 +91,7 @@
         <!-- card banner  -->
 
         <div
-          class="hidden lg:flex flex-col lg:flex-row gap-8 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:px-4 *:py-6 absolute *:w-[350px] -bottom-[300px] lg:-bottom-[60px] left-[15%]"
+          class="lg:flex flex-col lg:flex-row gap-8 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:px-4 *:py-6 absolute lg:*:w-[350px] -bottom-[300px] lg:-bottom-[60px] left-[15%]"
         >
           <div>
             <img src="images/people.png" alt="pepole" />
@@ -118,7 +120,7 @@
 
     <main id="main">
       <!-- Best offers for you  -->
-      <section class="lg:pt-12 px-2 max-w-6xl mx-auto mt-4">
+      <section class="lg:pt-12 px-2 max-w-6xl mx-auto pt-[300px]">
         <h1 class="text-center pt-4 lg:pt-12 text-3xl font-bold raleway-midium">
           Best offers for you
         </h1>
@@ -599,10 +601,10 @@
     <!-- sucsess modal -->
     <div
       id="sucsess-modal"
-      class="flex justify-center items-center min-h-screen bg-[#e8e6e6] hidden"
+      class="flex justify-center items-center min-h-screen bg-[#e8e6e6] hidden px-2"
     >
-      <div class="rounded-lg w-[530px] h-[400px] text-center bg-white p-6">
-        <img class="block mx-auto" src="images/success.png" alt="" />
+      <div class="rounded-lg lg:w-[530px] h-[400px] text-center bg-white p-6">
+        <img class="w-[30%] block mx-auto" src="images/success.png" alt="" />
         <h3 class="font-bold text-[#27AE60] py-6">SUCCESS</h3>
         <p class="font-bold text-[#4A4A4A]">
           Thank you for Booking Our Bus Seats. <br />
@@ -613,7 +615,7 @@
         </p>
         <button
           id="continue"
-          class="w-[300px] py-3 bg-[#27AE60] rounded-full text-white"
+          class="w-[200px] lg:w-[300px] py-3 bg-[#27AE60] rounded-full text-white"
         >
           Continue
         </button>
