--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
     <!-- footer section started -->
     <footer
       id="footer"
-      class="px-4 md:px-44 py-5 md:py-20 bg-[#030712] text-white"
+      class="px-4 lg:px-28 py-5 md:py-20 bg-[#030712] text-white"
     >
       <div
         class="flex flex-col md:flex-row md:justify-between md:items-center border-b border-dashed border-[#FFFFFF4D] pb-6 gap-y-2 md:gap-y-0"
